[project]
name = "linebot-secratary1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "line-bot-sdk>=3.21.0",
    "notion-client>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
